apps/dssp-node-test-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-node-test-1
  labels:
    backstage.io/kubernetes-id: dssp-node-test-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-node-test-1
  template:
    metadata:
      labels:
        app: dssp-node-test-1
        backstage.io/kubernetes-id: dssp-node-test-1
    spec:
      containers:
        - name: dssp-node-test-1
          image: chaitanyapandeygspann/dssp-node-test-1:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
