apps/dssp-node-test-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-node-test-1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
spec:
  rules:
    - http:
        paths:
          - path: /dssp-node-test-1(/|$)(.*)               
            pathType: Prefix        
            backend:
              service:
                name: dssp-node-test-1
                port:
                  number: 80
